@@ -1,6 +1,7 @@
 <div id="menu">
   <h1>- Camlp5 -</h1>
   <p class="subtitle">Version <version/></p>
+  <p>...work in progress...<br/>... 30 August 2007...</p>
   <ul>
     <li><a href="index.html">Introduction</a></li>
     <li><a href="ptools.html">Parsing and printing tools</a></li>
